Commit 28: separated repository entity from web layer logic